cmake_minimum_required(VERSION 3.16)

project(CompEncrRLE LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(CompEncrRLE main.cpp)

include(GNUInstallDirs)
install(TARGETS CompEncrRLE
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
